--- a/repo_helper.yml
+++ b/repo_helper.yml
@@ -17,6 +17,7 @@ enable_tests: false
 enable_conda: false
 on_pypi: false
 docs_url: https://contributing-to-sphinx-toolbox.readthedocs.io
+preserve_custom_theme: true
 
 python_versions:
  - '3.8'
